--- a/rating.html
+++ b/rating.html
@@ -7,7 +7,15 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
   <style>
-    :root{ --line:rgba(255,255,255,.08); --panel:#111215; }
+    :root{
+      --line:rgba(255,255,255,.08);
+      --panel:#111215;
+      --accent-gold:#fbbf24;
+      --accent-gold-soft:#facc15;
+      --accent-green:#22c55e;
+      --accent-red:#ef4444;
+      --accent-blue:#38bdf8;
+    }
 
     .hint{opacity:.75}
 
@@ -15,7 +23,7 @@
     .season-rating-head{
       margin-bottom:24px;
       padding:24px 22px;
-      background:linear-gradient(135deg,#101117,#181924);
+      background:radial-gradient(circle at top left,#1f2933 0,#101117 55%,#050609 100%);
       border-radius:20px;
       border:1px solid rgba(255,255,255,.10);
       box-shadow:0 18px 40px rgba(0,0,0,.55);
@@ -46,28 +54,41 @@
     .pill{
       padding:4px 10px;
       border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
+      border:1px solid rgba(255,255,255,.18);
       background:rgba(0,0,0,.25);
+      box-shadow:0 0 0 1px rgba(0,0,0,.3);
     }
     @media (max-width:640px){
       .season-rating-head{ padding:18px 16px; }
     }
 
     /* ===== Таблиця рейтингу сезону ===== */
-    .card--season{ margin-top:20px; }
+    .card--season{
+      margin-top:20px;
+      border-radius:18px;
+      background:linear-gradient(145deg,#0b0c10,#12131a);
+      border:1px solid rgba(255,255,255,.06);
+      box-shadow:0 14px 30px rgba(0,0,0,.6);
+      padding:18px 16px 14px;
+    }
+    .card--season h3{
+      margin:0 0 10px;
+    }
 
     .table--season{
       width:100%;
       border-collapse:collapse;
       font-size:.9rem;
+      overflow:hidden;
+      border-radius:12px;
     }
     .table--season thead{
-      background:#181920;
+      background:linear-gradient(90deg,#181920,#14151d);
     }
     .table--season thead th{
       border-bottom:1px solid var(--line);
       border-right:1px solid rgba(255,255,255,.04);
-      padding:8px 8px;
+      padding:7px 6px;
       text-align:center;
       font-weight:600;
       opacity:.9;
@@ -75,14 +96,20 @@
     .table--season thead th:first-child{
       text-align:left;
     }
+
     .table--season tbody tr{
-      background:#101116;
+      background:#0f1016;
+      transition:background .15s ease,transform .12s ease;
     }
     .table--season tbody tr:nth-child(odd){
-      background:#12131a;
+      background:#11121a;
+    }
+    .table--season tbody tr:hover{
+      background:#191b25;
+      transform:translateY(-1px);
     }
     .table--season tbody td{
-      padding:6px 8px;
+      padding:5px 6px;
       border-bottom:1px solid rgba(255,255,255,.04);
       border-right:1px solid rgba(255,255,255,.02);
       text-align:center;
@@ -92,58 +119,95 @@
       text-align:left;
     }
 
-    /* === КОМПАКТНІ КОЛОНКИ ЯК НА IRON.FISH === */
-.col-place{width:64px}
-.col-team{min-width:160px}
-.col-stage{width:42px}
-.col-points{width:72px}
-.col-weight{width:88px}
-.col-big{width:88px}
+    /* === Компактні колонки === */
+    .col-place{width:70px}
+    .col-team{min-width:170px}
+    .col-stage{width:42px}
+    .col-points{width:80px}
+    .col-weight{width:96px}
+    .col-big{width:96px}
 
-/* компактні бейджі етапів */
-.badge-stage{
-  min-width:30px;
-  padding:1px 4px;
-  font-size:.72rem;
-}
-
-/* компактний блок місця */
-.place-wrap{
-  gap:1px;
-  align-items:flex-start;
-}
-
-.place-num{
-  font-size:.85rem;
-  line-height:1;
-}
-
-.move{
-  font-size:.65rem;
-  padding:0 4px;
-}
-    .move--up{color:#4ade80;border-color:rgba(74,222,128,.4)}
-    .move--down{color:#f97373;border-color:rgba(248,113,113,.4)}
+    /* Блок місця / руху */
+    .place-wrap{
+      display:flex;
+      flex-direction:column;
+      gap:1px;
+      align-items:flex-start;
+    }
+    .place-num{
+      font-size:.9rem;
+      line-height:1;
+      font-weight:700;
+    }
+    .move{
+      font-size:.65rem;
+      display:inline-flex;
+      align-items:center;
+      gap:4px;
+      padding:0 4px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.10);
+      opacity:.9;
+    }
+    .move--up{color:var(--accent-green);border-color:rgba(34,197,94,.45)}
+    .move--down{color:var(--accent-red);border-color:rgba(239,68,68,.45)}
     .move--same{color:#e5e7eb;border-style:dashed}
 
+    /* Бейджі етапів */
     .badge-stage{
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      min-width:42px;
-      padding:2px 6px;
+      min-width:30px;
+      padding:1px 4px;
       border-radius:6px;
-      background:rgba(255,255,255,.03);
-      border:1px solid rgba(255,255,255,.06);
-      font-size:.8rem;
+      font-size:.72rem;
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(15,23,42,.7);
+    }
+    /* приклад кольорів, які потім можна ставити з JS */
+    .badge-stage--ok{
+      background:rgba(34,197,94,.12);
+      border-color:rgba(34,197,94,.55);
+      color:#bbf7d0;
+    }
+    .badge-stage--skip{
+      background:rgba(148,163,184,.10);
+      border-color:rgba(148,163,184,.45);
+      color:#cbd5f5;
     }
 
     /* Перші 18 команд — учасники фіналу */
     .row-qualified{
-      box-shadow:inset 3px 0 0 #facc15;
+      box-shadow:inset 3px 0 0 var(--accent-gold-soft);
     }
     .row-qualified .place-num{
-      color:#fde68a;
+      color:var(--accent-gold-soft);
+    }
+
+    /* Топ-3 окремо підсвічені */
+    .table--season tbody tr:nth-child(1){
+      background:radial-gradient(circle at left,#3b2f12 0,#11121a 55%);
+    }
+    .table--season tbody tr:nth-child(1) .place-num{
+      color:var(--accent-gold);
+    }
+    .table--season tbody tr:nth-child(2){
+      background:radial-gradient(circle at left,#1f2933 0,#11121a 55%);
+    }
+    .table--season tbody tr:nth-child(3){
+      background:radial-gradient(circle at left,#3b1f1a 0,#11121a 55%);
+    }
+
+    /* Акценти в числах */
+    .col-points b{
+      color:var(--accent-gold);
+      letter-spacing:.02em;
+    }
+    .col-weight{color:#e5e7eb;}
+    .col-big{
+      color:var(--accent-blue);
+      font-weight:500;
     }
 
     .rating-status{
@@ -220,7 +284,7 @@
           </tr>
         </thead>
         <tbody id="season-body">
-          <!-- Сюди JS підставить дані з таблиці; тимчасово один рядок-пример -->
+          <!-- Демо-рядок, потім JS підтягне реальні дані -->
           <tr class="row-qualified">
             <td class="col-place">
               <div class="place-wrap">
@@ -229,12 +293,12 @@
               </div>
             </td>
             <td class="col-team">Назва команди</td>
-            <td class="col-stage"><span class="badge-stage">1</span></td>
-            <td class="col-stage"><span class="badge-stage">2</span></td>
-            <td class="col-stage"><span class="badge-stage">3</span></td>
-            <td class="col-stage"><span class="badge-stage">4</span></td>
-            <td class="col-stage"><span class="badge-stage">5</span></td>
-            <td class="col-stage"><span class="badge-stage">1</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--ok">1</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--ok">2</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--ok">3</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--ok">4</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--skip">–</span></td>
+            <td class="col-stage"><span class="badge-stage badge-stage--ok">1</span></td>
             <td class="col-points"><b>25</b></td>
             <td class="col-weight">368.400</td>
             <td class="col-big">14.875</td>
@@ -261,8 +325,6 @@
 </footer>
 
 <script>
-/* Якщо захочеш — тут пізніше додамо підвантаження з Google Sheets.
-   Поки таблиця статична, щоб ти чітко бачив верстку. */
 document.getElementById('rating-status').textContent =
   'Демо-таблиця. Дані будуть підтягуватись з Google Sheets після підключення.';
 </script>
