--- a/rating.html
+++ b/rating.html
@@ -62,7 +62,7 @@
       .season-rating-head{ padding:18px 16px; }
     }
 
-    /* ===== Блок рейтингу (без зайвої рамки) ===== */
+    /* ===== Блок рейтингу ===== */
     .card--season{
       margin-top:20px;
       padding:0;
@@ -74,19 +74,20 @@
       margin:0 0 8px;
     }
 
-    /* Обгортка тільки для скруглених кутів */
     .season-table-wrapper{
-      margin-top:0;
+      margin-top:6px;
       border-radius:12px;
       overflow:hidden;
+      background:#05060a;
+      border:1px solid rgba(255,255,255,.08);
     }
 
-    /* ===== Таблиця рейтингу сезону ===== */
+    /* ===== Базова таблиця ===== */
     .table--season{
       width:100%;
-      table-layout:fixed;          /* чітке ділення ширини */
+      table-layout:fixed;
       border-collapse:collapse;
-      font-size:.72rem;            /* було ~0.9rem — зменшили ~ на 20% */
+      font-size:.75rem;              /* дрібніше ~ на 20% */
       background:#05060a;
     }
     .table--season thead{
@@ -95,15 +96,13 @@
     .table--season thead th{
       border-bottom:1px solid var(--line);
       border-right:1px solid rgba(255,255,255,.04);
-      padding:4px 2px;
+      padding:5px 2px;
       text-align:center;
       font-weight:600;
       opacity:.9;
       white-space:normal;
       overflow:hidden;
       text-overflow:clip;
-      font-size:.58rem;           /* дрібніші заголовки */
-      line-height:1.1;
     }
     .table--season thead th:first-child{
       text-align:left;
@@ -128,22 +127,21 @@
       overflow:hidden;
       text-overflow:ellipsis;
       box-sizing:border-box;
-      font-size:.64rem;           /* дрібніші цифри в клітинках */
     }
     .table--season tbody td:first-child,
     .table--season tbody td.col-team{
       text-align:left;
     }
 
-    /* === ШИРИНИ КОЛОНОК (сума ≤ 100%) === */
+    /* === ШИРИНИ КОЛОНОК (сума ≈ 100%) === */
     .col-place  { width:7%; }
-    .col-team   { width:17%; }
-    .col-stage  { width:6%; }   /* Е1–Е5 + фінал = 6*6 = 36% */
+    .col-team   { width:18%; }
+    .col-stage  { width:6%; }   /* 6 етапів = 36% */
     .col-points { width:7%; }
-    .col-weight { width:13%; }  /* трохи більше для ваги */
-    .col-big    { width:14%; }  /* трохи більше для Big Fish */
+    .col-weight { width:12%; }
+    .col-big    { width:10%; }
 
-    /* Блок місця / руху */
+    /* Місце / рух */
     .place-wrap{
       display:flex;
       flex-direction:column;
@@ -151,16 +149,16 @@
       align-items:flex-start;
     }
     .place-num{
-      font-size:.70rem;
+      font-size:.8rem;
       line-height:1;
       font-weight:700;
     }
     .move{
-      font-size:.55rem;
+      font-size:.6rem;
       display:inline-flex;
       align-items:center;
       gap:4px;
-      padding:0 3px;
+      padding:0 4px;
       border-radius:999px;
       border:1px solid rgba(255,255,255,.10);
       opacity:.9;
@@ -169,13 +167,13 @@
     .move--down{color:var(--accent-red);border-color:rgba(239,68,68,.45)}
     .move--same{color:#e5e7eb;border-style:dashed}
 
-    /* Клітинка етапу: місце / бали */
+    /* Етап: місце / бали */
     .stage-cell{
       display:flex;
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      font-size:.62rem;
+      font-size:.65rem;
       line-height:1.05;
     }
     .stage-place{
@@ -183,68 +181,73 @@
       color:#e5e7eb;
     }
     .stage-points{
-      font-size:.55rem;
+      font-size:.58rem;
       opacity:.85;
       color:#9ca3af;
     }
 
-    /* Перші 18 команд — учасники фіналу */
-    .row-qualified{
+    /* Перші 18 команд — учасники фіналу (верхня таблиця) */
+    .table--main tbody tr.row-qualified{
       box-shadow:inset 3px 0 0 var(--accent-gold-soft);
     }
-    .row-qualified .place-num{
+    .table--main tbody tr.row-qualified .place-num{
       color:var(--accent-gold-soft);
     }
 
-    /* Топ-3 окремо підсвічені */
-    .table--season tbody tr:nth-child(1){
+    /* Топ-3 підсвічені */
+    .table--main tbody tr:nth-child(1){
       background:radial-gradient(circle at left,#3b2f12 0,#11121a 55%);
     }
-    .table--season tbody tr:nth-child(1) .place-num{
+    .table--main tbody tr:nth-child(1) .place-num{
       color:var(--accent-gold);
     }
-    .table--season tbody tr:nth-child(2){
+    .table--main tbody tr:nth-child(2){
       background:radial-gradient(circle at left,#1f2933 0,#11121a 55%);
     }
-    .table--season tbody tr:nth-child(3){
+    .table--main tbody tr:nth-child(3){
       background:radial-gradient(circle at left,#3b1f1a 0,#11121a 55%);
     }
 
-    /* Акценти в числах */
+    /* Цифри */
     .col-points b{
       color:var(--accent-gold);
       letter-spacing:.02em;
-      font-size:.72rem;
     }
-    .col-weight{
-      color:#e5e7eb;
-      font-size:.64rem;
-    }
+    .col-weight{color:#e5e7eb;}
     .col-big{
       color:var(--accent-blue);
       font-weight:500;
-      font-size:.62rem;
     }
 
-    .rating-status{
-      margin-top:8px;
+    .rating-note{
+      margin-top:6px;
       font-size:.8rem;
       opacity:.7;
     }
 
-    /* ===== МОБІЛКА ===== */
+    /* Підзаголовок для претендентів */
+    .subhead{
+      margin:18px 0 6px;
+      font-weight:600;
+      font-size:.95rem;
+    }
+    .subhead span{
+      opacity:.7;
+      font-size:.8rem;
+      font-weight:400;
+    }
+
     @media (max-width:480px){
       .table--season{
-        font-size:.7rem;
+        font-size:.72rem;
       }
       .table--season thead th,
       .table--season tbody td{
-        padding:3px 2px;
+        padding:3px 1px;
       }
-      .col-weight-header,
-      .col-big-header{
-        font-size:.62rem;
-      }
+      .place-num{font-size:.76rem;}
+      .stage-cell{font-size:.62rem;}
+      .stage-points{font-size:.55rem;}
     }
   </style>
 </head>
@@ -290,12 +293,12 @@
       </div>
     </div>
 
-    <!-- Рейтинг команд -->
-    <div class="card card--season" id="season-wrap">
+    <!-- Рейтинг команд сезону — ТОП-18 -->
+    <div class="card card--season">
       <h3>Рейтинг команд сезону 2026</h3>
 
       <div class="season-table-wrapper">
-        <table class="table table--season">
+        <table class="table table--season table--main">
           <thead>
             <tr>
               <th class="col-place">Місце / рух</th>
@@ -307,12 +310,12 @@
               <th class="col-stage">Е5 м/б</th>
               <th class="col-stage">Фінал м/б</th>
               <th class="col-points">Бали сезону</th>
-              <th class="col-weight col-weight-header">Загал вага, кг</th>
-              <th class="col-big col-big-header">Big Fish сезону, кг</th>
+              <th class="col-weight">Загал вага, кг</th>
+              <th class="col-big">Big Fish сезону, кг</th>
             </tr>
           </thead>
-          <tbody id="season-body">
-            <!-- Демо-рядок, потім JS підтягне реальні дані -->
+          <tbody id="season-top">
+            <!-- Демо-рядки 1–3; реально сюди підуть перші 18 команд -->
             <tr class="row-qualified">
               <td class="col-place">
                 <div class="place-wrap">
@@ -320,58 +323,192 @@
                   <span class="move move--same">–</span>
                 </div>
               </td>
-              <td class="col-team">Назва команди</td>
-
-              <!-- Етапи: місце / бали -->
+              <td class="col-team">AirHook</td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">1</span>
-                  <span class="stage-points">/ 5</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">1</span><span class="stage-points">/ 2</span></div>
               </td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">2</span>
-                  <span class="stage-points">/ 8</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">2</span><span class="stage-points">/ 5</span></div>
               </td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">3</span>
-                  <span class="stage-points">/ 10</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">3</span><span class="stage-points">/ 7</span></div>
               </td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">4</span>
-                  <span class="stage-points">/ 12</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
               </td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">–</span>
-                  <span class="stage-points">/ –</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
               </td>
               <td class="col-stage">
-                <div class="stage-cell">
-                  <span class="stage-place">1</span>
-                  <span class="stage-points">/ 5</span>
-                </div>
+                <div class="stage-cell"><span class="stage-place">1</span><span class="stage-points">/ 0</span></div>
               </td>
-
-              <td class="col-points"><b>25</b></td>
+              <td class="col-points"><b>14</b></td>
               <td class="col-weight">368.400</td>
               <td class="col-big">14.875</td>
             </tr>
+
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">2</span>
+                  <span class="move move--down">↓ 1</span>
+                </div>
+              </td>
+              <td class="col-team">Max Fish</td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">3</span><span class="stage-points">/ 7</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">2</span><span class="stage-points">/ 5</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">4</span><span class="stage-points">/ 9</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-points"><b>21</b></td>
+              <td class="col-weight">342.775</td>
+              <td class="col-big">13.200</td>
+            </tr>
+
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">3</span>
+                  <span class="move move--up">↑ 2</span>
+                </div>
+              </td>
+              <td class="col-team">Garage</td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">5</span><span class="stage-points">/ 11</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">3</span><span class="stage-points">/ 7</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">1</span><span class="stage-points">/ 0</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-points"><b>18</b></td>
+              <td class="col-weight">329.050</td>
+              <td class="col-big">15.300</td>
+            </tr>
+
+            <!-- …далі будуть рядки аж до 18-го місця -->
           </tbody>
         </table>
       </div>
 
-      <p class="form__hint hint">
+      <p class="rating-note">
         Рух місця показує зміну позиції команди відносно попереднього оновлення рейтингу.
-        В етапах вказано <b>місце / набрані бали</b>.
+        У колонках етапів вказано <b>місце / набрані бали</b> з урахуванням бонусу <b>-1 бал</b> за рибу 13+ кг.
+        Незаповнені етапи відображаються як <b>– / –</b> і не враховуються в загальних балах сезону.
       </p>
+
+      <!-- Блок претендентів -->
+      <h4 class="subhead">
+        Претенденти на участь у Фіналі сезону
+        <span>— команди, що знаходяться нижче 18-го місця</span>
+      </h4>
+
+      <div class="season-table-wrapper">
+        <table class="table table--season table--contenders">
+          <thead>
+            <tr>
+              <th class="col-place">Місце / рух</th>
+              <th class="col-team">Команда</th>
+              <th class="col-stage">Е1 м/б</th>
+              <th class="col-stage">Е2 м/б</th>
+              <th class="col-stage">Е3 м/б</th>
+              <th class="col-stage">Е4 м/б</th>
+              <th class="col-stage">Е5 м/б</th>
+              <th class="col-stage">Фінал м/б</th>
+              <th class="col-points">Бали сезону</th>
+              <th class="col-weight">Загал вага, кг</th>
+              <th class="col-big">Big Fish сезону, кг</th>
+            </tr>
+          </thead>
+          <tbody id="season-contenders">
+            <!-- Демо-рядки 19+; реально сюди підуть всі команди після 18-го місця -->
+            <tr>
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">19</span>
+                  <span class="move move--up">↑ 1</span>
+                </div>
+              </td>
+              <td class="col-team">DK Два Кума</td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">7</span><span class="stage-points">/ 15</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">5</span><span class="stage-points">/ 11</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-points"><b>26</b></td>
+              <td class="col-weight">198.750</td>
+              <td class="col-big">12.900</td>
+            </tr>
+
+            <tr>
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">20</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">MAD CATs</td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">9</span><span class="stage-points">/ 17</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">8</span><span class="stage-points">/ 16</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-stage">
+                <div class="stage-cell"><span class="stage-place">–</span><span class="stage-points">/ –</span></div>
+              </td>
+              <td class="col-points"><b>33</b></td>
+              <td class="col-weight">172.430</td>
+              <td class="col-big">11.450</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
   </section>
@@ -386,6 +523,5 @@
     </div>
   </div>
 </footer>
-
 </body>
 </html>
