--- a/rating.html
+++ b/rating.html
@@ -298,7 +298,7 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">Рух</th>
+              <th class="col-move">​↕️</th>
               <th class="col-team">Команда</th>
 
               <th class="col-stage">Е1<br>місце / бали</th>
